# Sudoku-Solver

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.in  sudoku.prj
include/: Makefile.am  Makefile.in  block3x3.h  game.h  game_base.h  game_mixed.h  game_old.h  game_simann.h  parameters.h
src/: Makefile.am  Makefile.in  block3x3.cc  game.cc  game.cc.orig  game_base.cc  game_mixed.cc  game_old.cc  game_simann.cc  main.cc  parameters.cc
