## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

sudoku_includedir = $(pkgincludedir)

sudoku_include_DATA = \
	block3x3.h\
	game_base.h\
	game_old.h\
	game_mixed.h\
	game_simann.h

EXTRA_DIST = $(sudoku_include_DATA)
