## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

sudoku_CXXFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = sudoku

sudoku_SOURCES = \
	main.cc\
	block3x3.cc\
	game.cc

sudoku_LDFLAGS = 

sudoku_LDADD = 

